--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "jest": "jest --coverage --verbose",
+    "jest": "NODE_ENV=test jest",
     "test": "yarn jest"
   },
   "dependencies": {
@@ -37,27 +37,5 @@
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.4.1",
     "redux-devtools-extension": "^2.13.5"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.js$": "babel-jest"
-    },
-    "moduleNameMapper": {
-      "\\.(jpe?g|png|gif|eot|otf|webp|svg|ttf|woff2?|mp[34]|webm|wav|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
-      "\\.(css|less|s[ac]ss|styl)$": "<rootDir>/test/__mocks__/styleMock.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
-    "moduleFileExtensions": [
-      "js",
-      "jsx"
-    ],
-    "setupFiles": [
-      "./test/jestsetup.jsx"
-    ],
-    "snapshotSerializers": [
-      "enzyme-to-json/serializer"
-    ]
   }
 }
