--- a/.babelrc
+++ b/.babelrc
@@ -1,19 +1,18 @@
 {
+  "presets": [
+    "next/babel"
+  ],
   "env": {
-    "development": {
-      "presets": ["next/babel"]
-    },
-    "production": {
-      "presets": ["next/babel"]
-    },
     "test": {
       "presets": [
         [
+          "next/babel",
           {
-            "modules": "commonjs"
+            "preset-env": {
+              "modules": "commonjs"
+            }
           }
-        ],
-        "next/babel"
+        ]
       ]
     }
   }
