--- a/package.json
+++ b/package.json
@@ -7,35 +7,60 @@
     "dev": "node server.js",
     "build": "next build",
     "start": "NODE_ENV=production node server.js",
-    "jest": "NODE_ENV=test jest",
+    "jest": "NODE_ENV=test jest --verbose --coverage",
     "test": "yarn jest"
   },
   "dependencies": {
     "@zeit/next-sass": "^0.2.0",
+    "compression": "^1.7.3",
     "dev": "^0.1.3",
     "express": "^4.16.3",
+    "helmet": "^3.13.0",
     "isomorphic-unfetch": "^2.0.0",
     "next": "^6.1.1",
     "next-compose-plugins": "^2.1.1",
     "next-redux-wrapper": "^2.0.0",
+    "next-routes": "^1.4.2",
     "node-sass": "^4.9.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-helmet": "^5.2.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.4.0",
+    "babel-polyfill": "^6.26.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
     "jest": "^23.4.1",
     "next-progressbar": "^1.0.0",
+    "raf": "^3.4.0",
     "react-addons-test-utils": "^15.6.2",
     "react-test-renderer": "^16.4.1",
-    "redux-devtools-extension": "^2.13.5"
+    "redux-devtools-extension": "^2.13.5",
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack-bundle-analyzer": "^2.13.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpe?g|png|gif|eot|otf|webp|svg|ttf|woff2?|mp[34]|webm|wav|m4a|aac|oga)$": "<rootDir>/test/__mocks__/fileMock.js",
+      "\\.(css|less|s[ac]ss|styl)$": "<rootDir>/test/__mocks__/styleMock.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "setupTestFrameworkScriptFile": "./test/jestsetup.jsx",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   }
 }
