--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 language: node_js
 
 node_js:
+  - '6'
   - '10'
 
 install:
@@ -12,7 +13,14 @@ cache:
   directories:
     - node_modules
 
+# Necessary to compile native modules for io.js v3 or Node.js v4
+env:
+  - CXX=g++-4.8
+
+# Necessary to compile native modules for io.js v3 or Node.js v4
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
