--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,12 @@ git:
 
 node_js:
   - '10'
+
+env:
+  - CXX=g++-4.8
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.8
