--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,18 @@
-sudo: false
+sudo: required
+before_install:
+  - npm install -g node-gyp
 language: node_js
 node_js:
-  - "10.0"
-  - "node"
+  - 10
 env:
-  - CXX=g++-4.8
+  - CXX=g++-4.9
 
 addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
     packages:
-      - g++-4.8
+      - g++-4.9
 
 cache:
   apt: true
